@@ -4,6 +4,8 @@ Supported Presently
 
 Changelog for 1.3.33
 * Fixed <?lsmb YYMMMDD ?> interpolation in settings (Chris T)
+* Fixed Department dropdown ordering and selection (Chris T, 810)
+* Fixed Project dropdown ordering and selection (Chris T, 809)
 
 Changelog for 1.3.32
 * Fixed em-dash handling for pdfs (Chris T)
